--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mocha": "^5.2.0",
     "mars": "https://github.com/komunikator/mars.git",
     "sip.server": "https://github.com/komunikator/sip.server.git",
-    "sip.client": "https://github.com/komunikator/sip.client.git"
+    "sip.client": "https://github.com/komunikator/sip.client.git",
+    "speech": "git+https://github.com/komunikator/speech.git"
   }
 }
